--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "mini.css": "^3.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
+    "zone.js": "~0.14.2",
+    "@fortawesome/fontawesome-free": "^6.5.2",
+    "@fortawesome/angular-fontawesome": "^0.14.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.0.7",
